tests/fixtures/invalid/int_mod_bytes.py
# Cannot compute Int modulo Bytes
x: int = 1 % b"hello"
